--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,14 @@
 
 /* Your CSS Code here. */
-
-/* Background should be black in colour,
-Font colour should be white,
-Border radius should be 5px, and
-Background should change to yellow, font colour to black and the border radius should increase to 30px
- on hovering over the button.
-Note: Assign id=btn to the button. */
-
 #btn {
 	background-color: black;
 	color: white;
+	border: none;
 	border-radius: 5px;
 }
 
 #btn:hover {
 	background-color: yellow;
 	color: black;
-	border-radius: 30px;
+	border-radius: 30px;	
 }
